<resources>
    <string name="app_name">FilRouge</string>
    <string name="email_hint">... ton email</string>
    <string name="password_hint">... ton mot de passe</string>
    <string name="login_button_title">Se connecter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_menu_title">Accueil</string>
    <string name="food_menu_title">Manger</string>
    <string name="fun_menu_title">Rigoler</string>
    <string name="move_menu_title">Bouger</string>
    <string name="password_error_hint">Ton mot de passe n\'est pas valide</string>
    <string name="email_error_hint">Ton email n\'est pas valide</string>
    <string name="speech_bubble_title">Hey ! Komen ksé ?!</string>
    <string name="speech_bubble_subtitle">Allez... Connecte-toi !</string>
    <string name="eat_card_title">J\'ai une faim de loup !</string>
    <string name="fun_card_title">Jsuis en dep !</string>
    <string name="move_card_title">Faut qu\'jme bouge !</string>
</resources>