<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AuthenticationActivity"
    android:background="@drawable/bg_blue_homeboarding">

    <ImageView
        android:id="@+id/kevinImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_jeankevin_full"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/bubble_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/bubble_layout"
        android:layout_width="280dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="@drawable/input_rounded_background"
        android:layout_marginTop="37.5dp"
        android:layout_gravity="center">
        <TextView
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal|bottom"
            android:textAlignment="gravity"
            android:text="@string/speech_bubble_title"
            android:textColor="@color/pink"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal|top"
            android:text="@string/speech_bubble_subtitle"
            android:textColor="@color/black"
            android:textSize="14sp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_bubble_triangle"
        app:layout_constraintEnd_toEndOf="@id/bubble_layout"
        app:layout_constraintTop_toBottomOf="@id/bubble_layout"
        android:layout_marginEnd="66dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/login_rounded_background">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margins"
            android:layout_marginTop="39dp"
            android:layout_marginBottom="@dimen/input_vertical_margins"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorIconDrawable="@drawable/ico_cross_rose"
            app:startIconDrawable="@drawable/ico_profile_blue"
            android:background="@drawable/input_rounded_background"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:background="@android:color/transparent"
                android:textSize="@dimen/input_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/input_horizontal_margins"
            android:layout_marginVertical="@dimen/input_vertical_margins"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorIconDrawable="@drawable/ico_cross_rose"
            app:startIconDrawable="@drawable/ico_password_blue"
            android:background="@drawable/input_rounded_background"
            app:hintEnabled="false">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:background="@android:color/transparent"
                android:textSize="@dimen/input_text_size"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:paddingHorizontal="44dp"
            android:layout_marginHorizontal="@dimen/button_horizontal_margins"
            android:layout_marginVertical="@dimen/button_vertical_margins"
            android:text="@string/login_button_title"
            android:textAllCaps="false"
            android:onClick="onAuthenticationRequest"
            android:layout_gravity="center"
            app:backgroundTint="@null"
            android:background="@drawable/button_background_selector"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:enabled="false"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>